showing player on screen (Yet to bind move event)

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    div#world
+    canvas#floor
+    div#add_player(onclick="add_player()")  Add Player
