--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')    
+  script(type='text/javascript', src='javascripts/board.js')
+  script(type='text/javascript', src='javascripts/client.js')
+      
