--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,10 @@ extends layout
 block content
     div#world
     canvas#floor
-    div#add_player(onclick="add_player()")  Add Player
+    div#add_player(onclick="add_player()")  Add players.forEach
+    div#control
+      button.left(onclick="$(document).trigger('move','left')")
+      button.right(onclick="$(document).trigger('move','right')")
+      button.up(onclick="$(document).trigger('move','up')")
+      button.down(onclick="$(document).trigger('move','down')")
+
