--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     div#world
     canvas#floor
-    div#add_player(onclick="add_player()")  Add players.forEach
+    div#add_player(onclick="add_player()")  Add players
     div#control
       button.left(onclick="$(document).trigger('move','left')")
       button.right(onclick="$(document).trigger('move','right')")
